docs: record the measured ServerStarterJar/Forge range
The api landmine gets the table and the trap: `securemodules` 2.2.21 still
contains the throw, so reading the source condemns every modern Forge — and
1.21.1 boots through the starter jar anyway, because from Minecraft 1.20.3 the
installer writes a `-jar <shim>` argfile and the module-path route is never
taken. Widening the rule on source evidence alone would have cost every modern
pack the compatibility the starter jar exists for.

`variables.txt` and the root `HELP.md` (the source the api resource copy is
generated from — the copy is gitignored) now tell operators they should not need
`USE_SSJ` at all, rather than naming two Minecraft versions and leaving them to
act on it.

The grinder's loader notes record why its own knob came back out, and the api
row of the root table records that the two shells which cannot be executed
everywhere are now covered by driving the extracted function in a container.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>